--- a/mod_devaid.conf
+++ b/mod_devaid.conf
@@ -1,6 +1,6 @@
-dist_name = FvwmTiler
-modules = lib/FvwmTiler/Tiler.pm
-scripts = scripts/FvwmTiler
+dist_name = FvwmPiazza
+modules = lib/FvwmPiazza/Tiler.pm
+scripts = scripts/FvwmPiazza
 gen_readme = 1
 gen_todo = 1
 
