convert to use Dist::Zilla, second pass

--- a/dist.ini
+++ b/dist.ini
@@ -3,16 +3,18 @@ version           = 0.2
 author            = Kathryn Andersen
 license           = Perl_5
 copyright_holder  = Kathryn Andersen
+main_module       = lib/FvwmPiazza/Tiler.pm
 
 ; File Gather ---------------------
 [GatherDir]
+[ExecDir]
+dir = scripts
 [ReadmeFromPod]
 [ReadmeMarkdownFromPod]
 [License]
 [GitFmtChanges]
 file_name = Changes
 log_format = * %ai%n  %s
-[ExtraTests]
 
 ; File Prune ---------------------
 [PruneCruft]
@@ -23,14 +25,29 @@ log_format = * %ai%n  %s
 [PodVersion]
 
 ; Dist Prerequisites ---------------------
-[AutoPrereq]
+[AutoPrereqs]
 
 ; Dist Meta ---------------------
 [GithubMeta]
 [MetaYAML]
 
 ; Configure Install ---------------------
-[MakeMaker]
+[ModuleBuild]
+
+; Tests --------------------------
+[ExtraTests]
+[CompileTests]
+[PodCoverageTests]
+[PodSyntaxTests]
+;[PodLinkTests]
+[HasVersionTests]
+[MetaTests]
+[PortabilityTests]
+[KwaliteeTests]
+[ProgCriticTests]
+;[CriticTests]
+;[DistManifestTests]
+;[UnusedVarsTests]
 
 ; After Build ---------------------
 [Manifest]
