More doc tweaks.  Version bump.

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,10 @@
 name              = FvwmPiazza
-version           = 0.2001
+version           = 0.2002
 author            = Kathryn Andersen
 license           = Perl_5
 copyright_holder  = Kathryn Andersen
-main_module       = lib/FvwmPiazza/Tiler.pm
+;main_module       = lib/FvwmPiazza/Tiler.pm
+main_module       = scripts/FvwmPiazza
 
 ; File Gather ---------------------
 [GatherDir]
