renaming to FvwmLayout part 1

--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,10 @@
-name              = FvwmPiazza
+name              = FvwmLayout
 version           = 0.2002
 author            = Kathryn Andersen
 license           = Perl_5
 copyright_holder  = Kathryn Andersen
-;main_module       = lib/FvwmPiazza/Tiler.pm
-main_module       = scripts/FvwmPiazza
+;main_module       = lib/FvwmLayout/Tiler.pm
+main_module       = scripts/FvwmLayout
 
 ; File Gather ---------------------
 [GatherDir]
