Tweaking Dist::Zilla stuff.

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name              = FvwmLayout
-version           = 0.2002
+version           = 0.3
 author            = Kathryn Andersen
 license           = Perl_5
 copyright_holder  = Kathryn Andersen
@@ -37,24 +37,21 @@ log_format = * %ai%n  %s
 
 ; Tests --------------------------
 [ExtraTests]
-[CompileTests]
+[Test::Compile]
 [PodCoverageTests]
 [PodSyntaxTests]
-;[PodLinkTests]
+[Test::Pod::LinkCheck]
 [HasVersionTests]
 [MetaTests]
-[PortabilityTests]
-[KwaliteeTests]
-[ProgCriticTests]
-;[CriticTests]
-;[DistManifestTests]
-;[UnusedVarsTests]
+[Test::Portability]
+;[Test::Perl::Critic]
 
 ; After Build ---------------------
 [Manifest]
 
 ; Release ---------------------
 [TestRelease]
+[ConfirmRelease]
 [Git::Check]
 [Git::Tag]
 tag_message = %N v%v (%d)
