added a ConfirmRelease test

--- a/dist.ini
+++ b/dist.ini
@@ -55,6 +55,7 @@ log_format = * %ai%n  %s
 
 ; Release ---------------------
 [TestRelease]
+[ConfirmRelease]
 [Git::Check]
 [Git::Tag]
 tag_message = %N v%v (%d)
