updating dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -37,18 +37,12 @@ log_format = * %ai%n  %s
 
 ; Tests --------------------------
 [ExtraTests]
-[CompileTests]
+[Test::Compile]
 [PodCoverageTests]
 [PodSyntaxTests]
-;[PodLinkTests]
 [HasVersionTests]
 [MetaTests]
-[PortabilityTests]
-[KwaliteeTests]
-[ProgCriticTests]
-;[CriticTests]
-;[DistManifestTests]
-;[UnusedVarsTests]
+[Test::Portability]
 
 ; After Build ---------------------
 [Manifest]
