Dist::Zilla fix.

--- a/dist.ini
+++ b/dist.ini
@@ -36,6 +36,7 @@ log_format = * %ai%n  %s
 [ModuleBuild]
 
 ; Tests --------------------------
+[Test::ReportPrereqs]
 [ExtraTests]
 [Test::Compile]
 [PodCoverageTests]
